syntax = "proto3";

package api;
option go_package = ".;api";

import "basecoat_message.proto";

message CreateAPITokenRequest {
  string user = 1;
  string password = 2;
  // duration of API key in seconds
  int64 duration = 3;
}

message CreateAPITokenResponse { string key = 1; }

// Account transport messages
message GetAccountRequest { string id = 1; }
message GetAccountResponse { Account account = 1; }
message ListAccountsRequest {}
message ListAccountsResponse { map<string, Account> accounts = 1; }
message CreateAccountRequest {
  string id = 1;
  string password = 2;
}
message CreateAccountResponse {}
message UpdateAccountRequest {
  string id = 1;
  bytes hash = 2;
  enum State {
    UNKNOWN = 0;
    ACTIVE = 1;
    DISABLED = 2;
  }
  State state = 3;
}
message UpdateAccountResponse {}
message DisableAccountRequest { string id = 1; }
message DisableAccountResponse {}

message GetSystemInfoRequest {}
message GetSystemInfoResponse {
  string build_time = 1;
  string commit = 2;
  bool debug_enabled = 3;
  bool frontend_enabled = 4;
  string semver = 5;
}

message GetFormulaRequest { string id = 1; }
message GetFormulaResponse { Formula formula = 1; }

message SearchFormulasRequest { string term = 1; }

message SearchFormulasResponse { repeated string results = 1; }

message ListFormulasRequest {}

message ListFormulasResponse { map<string, Formula> formulas = 1; }

message CreateFormulaRequest {
  string name = 1;
  string number = 2;
  string notes = 3;
  repeated string jobs = 4;
  repeated Base bases = 5;
  repeated Colorant colorants = 6;
}
message CreateFormulaResponse { Formula formula = 1; }

message UpdateFormulaRequest {
  string id = 1;
  string name = 2;
  string number = 3;
  string notes = 4;
  repeated string jobs = 5;
  repeated Base bases = 6;
  repeated Colorant colorants = 7;
}
message UpdateFormulaResponse { Formula formula = 1; }

message DeleteFormulaRequest { string id = 1; }
message DeleteFormulaResponse {}

message GetJobRequest { string id = 1; }
message GetJobResponse { Job job = 1; }

message SearchJobsRequest { string term = 1; }

message SearchJobsResponse { repeated string results = 1; }

message ListJobsRequest {}
message ListJobsResponse { map<string, Job> jobs = 1; }

message CreateJobRequest {
  string name = 1;
  Address address = 2;
  string notes = 3;
  // formula ids that have been made for this job
  repeated string formulas = 4;
  string contractor_id = 5;
  Contact contact = 6;
}
message CreateJobResponse { Job job = 1; }

message UpdateJobRequest {
  string id = 1;
  string name = 2;
  Address address = 3;
  string notes = 4;
  // ids of formulas
  repeated string formulas = 5;
  string contractor_id = 6;
  Contact contact = 7;
}
message UpdateJobResponse { Job job = 1; }

message DeleteJobRequest { string id = 1; }
message DeleteJobResponse {}

message GetContractorRequest { string id = 1; }
message GetContractorResponse { Contractor Contractor = 1; }

message ListContractorsRequest {}
message ListContractorsResponse { map<string, Contractor> contractors = 1; }

message CreateContractorRequest {
  string company = 1;
  Contact contact = 2;
  repeated string jobs = 3;
}
message CreateContractorResponse { Contractor Contractor = 1; }

message UpdateContractorRequest {
  string id = 1;
  string company = 2;
  Contact contact = 3;
  repeated string jobs = 4;
}
message UpdateContractorResponse { Contractor Contractor = 1; }

message DeleteContractorRequest { string id = 1; }
message DeleteContractorResponse {}
